--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,12 @@ cachetools==4.1.1
 certifi==2020.6.20
 chardet==3.0.4
 click==7.1.2
+coreapi==2.3.3
+coreschema==0.0.4
 distlib==0.3.1
 Django==3.1.3
 django-cors-headers==3.5.0
+django-rest-swagger==2.2.0
 djangorestframework==3.12.2
 filelock==3.0.12
 Flask==1.1.2
@@ -19,9 +22,11 @@ httplib2==0.18.1
 idna==2.10
 install==1.3.3
 itsdangerous==1.1.0
+itypes==1.2.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
 oauth2client==4.1.3
+openapi-codec==1.3.2
 prettytable==0.7.2
 protobuf==3.13.0
 psycopg2==2.8.6
@@ -29,8 +34,10 @@ pyasn1==0.4.8
 pyasn1-modules==0.2.8
 python-dotenv==0.15.0
 pytz==2020.1
+PyYAML==5.3.1
 requests==2.24.0
 rsa==4.6
+simplejson==3.17.2
 six==1.15.0
 sqlparse==0.4.1
 uritemplate==3.0.1
