--- a/requirements.txt
+++ b/requirements.txt
@@ -7,8 +7,10 @@ click==7.1.2
 coreapi==2.3.3
 coreschema==0.0.4
 distlib==0.3.1
+dj-database-url==0.5.0
 Django==3.1.3
 django-cors-headers==3.5.0
+django-heroku==0.3.1
 django-rest-swagger==2.2.0
 djangorestframework==3.12.2
 filelock==3.0.12
@@ -18,6 +20,8 @@ google-api-python-client==1.10.0
 google-auth==1.20.1
 google-auth-httplib2==0.0.4
 googleapis-common-protos==1.52.0
+gunicorn==20.0.4
+heroku==0.1.4
 httplib2==0.18.1
 idna==2.10
 install==1.3.3
@@ -32,6 +36,7 @@ protobuf==3.13.0
 psycopg2==2.8.6
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
+python-dateutil==1.5
 python-dotenv==0.15.0
 pytz==2020.1
 PyYAML==5.3.1
@@ -44,4 +49,5 @@ uritemplate==3.0.1
 urllib3==1.25.10
 virtualenv==20.0.30
 Werkzeug==1.0.1
+whitenoise==5.2.0
 youtube3==1.2.1
